added a phone like box with the zen garden code to replace the wireframe imgs and bump up the text size

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One');
-@import url('https://fonts.googleapis.com/css?family=Ultra|Ramabhadra|Padauk');
+@import url('https://fonts.googleapis.com/css?family=Ultra|Ramabhadra|Padauk|Nothing+You+Could+Do|Harmattan');
 
 p {
 	font-family: 'Padauk', sans-serif;
@@ -14,6 +14,7 @@ p {
 .dna {
 	padding: 140px 125px;
 	color: rgba(38,44,53,0.9);
+	font-size: 30px;
 	/*background-color: rgba(38,44,53,0.7);*/
 	/*margin: 20px 0;*/
 }
@@ -28,6 +29,7 @@ p {
 	background-color: rgb(38,44,53);
 	/*margin: 20px 0;*/
   	padding: 140px 60px;
+  	font-size: 27px;
 }
 .map {
 	/*background: url(imgs/map1.png) no-repeat center center fixed;*/
@@ -78,4 +80,217 @@ p {
   	background-size: cover;
 	display: block;
 	height: 32em;
+}
+
+
+
+
+
+
+.phone {
+	width:420px; 
+	margin-left: 35%; 
+	border-style: groove; 
+	margin-bottom:50px; 
+	margin-top:20px;
+	height: 650px; 
+	overflow: scroll; 
+	border-radius: 30px;
+}
+
+.welcome {
+  	background: url(imgs/gardenZ.png) no-repeat center center fixed;
+  	/* url(../imgs/gardenZ.png) no-repeat center center fixed; */
+  	background-size: contain;
+	/*display: block;
+	font: 3em;*/
+/*	width: 100%;
+*/	height: 28em;
+	padding: 62px 22px;
+	top: 25%;
+	left: 0;
+	font-size: 20px;
+}
+
+.sf {
+	background: url(imgs/sf.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+.ny {
+	background: url(imgs/ny.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+.dc {
+	background: url(imgs/dc.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+.cgo {
+	background: url(imgs/cgo.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+.sle {
+	background: url(imgs/sle.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+.bos {
+	background: url(imgs/bos.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+.la {
+	background: url(imgs/la.jpeg) repeat center center fixed;
+	/*background-size: cover;*/
+	height: 2em;
+}
+
+.sand {
+	background: rgba(212, 203, 190, 0.5);
+	height: 2em;
+}
+
+p {
+	/*color: rgb(34, 34, 34);*/
+	/*font-family: 'Source Code Pro', monospace;*/
+	font-family: 'Harmattan', sans-serif;
+	font-size: larger;
+}
+#h2, #h4{
+	font-family: 'Harmattan', sans-serif;
+}
+#h1 {
+	font-family: 'Nothing You Could Do', cursive;
+}
+
+
+#navbar {
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+  width: 425px;
+  z-index: 1;
+  /*text-align: center;*/
+  color: rgb(40, 40, 40);
+  padding: 0 24px;
+  /*font: 20px "Trebuchet MS", Arial, sans-serif;*/
+}
+#h3 {
+	font-size: 19px;
+}
+#navbar nav a {
+  display: inline-block;
+  width: 100px;
+  margin: 0;
+  padding: 22px 0;
+  /*text-transform: uppercase;*/
+  color: rgb(40, 40, 40);
+  /*text-align: center;*/
+  text-decoration: none;
+  /*font: 20px "Trebuchet MS", Arial, sans-serif;*/
+}
+
+#navbar nav a.menu-icon {
+  display: none;
+}
+
+/*@media only screen and (max-width: 770px) {*/
+	#navbar nav a.menu-icon {
+    display: block;
+    float: right;
+    font-size: 1.9em;
+    width: auto;
+  }
+  #navbar {
+  	/*position: fixed;*/
+	background: white;
+  }
+  #navbar nav a {
+    display: inline;
+    width: 100%;
+    border-left: 0;
+    /*border-top: 1px dotted #ccc;*/
+    text-align: left;
+    padding: 10px;
+    /*color: black;*/
+    text-decoration: none;
+    clear: both;
+  }
+/*}*/
+
+/*@media only screen and (max-width: 380px) {
+	.dna {padding-right: 34px;}
+}*/
+
+.world {
+	/*background: rgba(34, 34, 34, 0.4);*/
+	background: rgba(228, 226, 210, 0.4);
+	width: 100%;
+	padding: 7px;
+	margin: 0;
+	/*margin-top: 125px;*/
+	/*color: rgb(212, 203, 190);*/
+}
+
+.services {
+	width: 100%;
+	padding: 25px;
+}
+
+.city {
+	padding: 10px;
+	margin: 8px;
+	background: rgba(212, 203, 190, 0.1);
+}
+
+#but {
+	background-color: rgb(207, 179, 186);
+	border-color: rgb(207, 179, 186);
+	margin: 10px;
+}
+
+.contacts{
+	/*background: rgb(26,26,26); */
+	color: rgb(56, 56, 56);
+	/*height: 425px;*/
+	padding: 40px; 
+	padding-bottom: 60px;
+}
+.contact{
+	padding: 0 53px;
+}
+
+.form-contro{
+	display: block;
+    width: 100%;
+    height: 34px;
+    margin: 7px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    /*background-color: rgb(26,26,26); */
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    /*-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);*/
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    /*-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;*/
+    /*-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+    /*transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;*/
+}
+.control {
+	display: block;
+    width: 100%;
+    height: 34px;
+    margin: 7px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
