--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One');
-@import url('https://fonts.googleapis.com/css?family=Ultra|Ramabhadra|Padauk|Nothing+You+Could+Do|Harmattan');
+@import url('https://fonts.googleapis.com/css?family=Ultra|Ramabhadra|Josefin+Sans|Nothing+You+Could+Do|Harmattan');
 
-p {
-	font-family: 'Padauk', sans-serif;
-	font-size: large;
+#pp {
+	font-family: 'Josefin Sans', sans-serif;
+	font-size: 36px;
 }
 #h3 {
 	font-family: 'Ramabhadra', sans-serif;
@@ -24,21 +23,18 @@ p {
   	/*background-size: cover;*/
 }
 .intro {
-	/*margin: 45px;*/
-	/*padding: 40px 95px;*/
-	color: white;
 	background-color: rgb(38,44,53);
-	/*margin: 20px 0;*/
-  	padding: 340px 60px;
-  	font-size: 30px;
+  	padding: 240px 60px;
+  	color:white;
+  	text-align: justify;
 }
 .map {
 	/*background: url(imgs/map1.png) no-repeat center center fixed;*/
   	/*background-size: cover;*/
   	/*width: 100%;*/
   	/*height: 30em;*/
-  	margin: 20px 0;
-  	padding: 140px 30px;
+  	margin: 50px 0;
+  	padding: 300px 30px;
 }
 .feeling {
 	padding-bottom: 25px;
@@ -47,6 +43,7 @@ p {
 	/*font-family: 'Alfa Slab One', cursive;*/
 	font-family: 'Ultra', serif;
 	font-size: 31px;
+	padding: 100px;
 }
 .site {
 	display: block;
@@ -57,7 +54,7 @@ p {
   	/* url(../imgs/gardenZ.png) no-repeat center center fixed; */
   	background-size: cover;
 	display: block;
-	height: 62em;
+	height: 72em;
 	/*padding: 62px 22px;*/
 	/*top: 25%;*/
 	/*left: 0;*/
@@ -68,7 +65,7 @@ p {
   	/* url(../imgs/gardenZ.png) no-repeat center center fixed; */
   	background-size: cover;
 	display: block;
-	height: 52em;
+	height: 62em;
 	/*margin: 61px;*/
 }
 #screen{
@@ -80,7 +77,7 @@ p {
   	/* url(../imgs/gardenZ.png) no-repeat center center fixed; */
   	background-size: cover;
 	display: block;
-	height: 52em;
+	height: 72em;
 }
 
 
@@ -89,12 +86,12 @@ p {
 
 
 .phone {
-	width:420px; 
+	width:474px; 
 	margin-left: 40%; 
 	border-style: groove; 
 	margin-bottom:50px; 
 	margin-top:20px;
-	height: 700px; 
+	height: 800px; 
 	overflow: scroll; 
 	border-radius: 30px;
 }
@@ -105,8 +102,8 @@ p {
   	background-size: contain;
 	/*display: block;
 	font: 3em;*/
-/*	width: 100%;
-*/	height: 28em;
+	width: 100%;
+	height: 34em;
 	padding: 62px 22px;
 	top: 25%;
 	left: 0;
